[package]
name = "bitcoin-bech32"
version = "0.12.1"
authors = ["Clark Moody"]
repository = "https://github.com/rust-bitcoin/rust-bech32-bitcoin"
description = "Encodes and decodes Bitcoin Segregated Witness addresses in Bech32"
readme = "README.md"
keywords = ["bitcoin", "base32", "bech32", "encoding"]
categories = ["encoding"]
license = "MIT"

[features]
default = ["std"]
std = ["bech32/std"]
# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []

[dependencies]
bech32 = "0.8.0"
