[package]
name = "bitcoin-bech32"
version = "0.13.0"
authors = ["Clark Moody"]
repository = "https://github.com/rust-bitcoin/rust-bech32-bitcoin"
description = "Encodes and decodes Bitcoin Segregated Witness addresses in Bech32"
readme = "README.md"
keywords = ["bitcoin", "base32", "bech32", "encoding"]
categories = ["encoding"]
license = "MIT"

[features]
default = ["std"]
# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []
std = ["bech32/std"]

[dependencies]
bech32 = { version = "0.9.1", default-features = false }
